[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
h2 = "0.3.14"
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.9", default-features = false }
tokio-rustls = "0.23.2"
webpki-roots = "0.22.2"
http = "0.2.0"
bytes = "1"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
